styles.css
@font-face {
  font-family: "VampireWars";
  src: url("./vampire-wars.otf") format("opentype");
}

@font-face {
  font-family: "Hamish";
  src: url("./Hamish.otf") format("opentype");
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: "Hamish";
}

body {
  display: flex;
  justify-content: center;
  width: 100vw;
  height: 100vh;
  overflow: hidden;
}

label {
  font-size:2rem;
  color:white;
  text-align: center;
  width:90%;
}

input {
  font-size:2rem;
  color:white;
}

#container {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  width: 100%;
  height: 100vh;
  background-image: url("./Christmas Background.jpg");
  gap:40px;
  overflow-x: hidden;
}

#game-container {
  width: 100%;
  max-width: 320px;
  min-height: 320px;
  background-color: #F7F0F0;
  border:4px solid #F7F0F0;
  display: grid;
  grid-gap: 0.2rem;
  grid-template-rows: repeat(var(--grid-rows), 1fr);
  grid-template-columns: repeat(var(--grid-cols), 1fr);
}

#player-1-message {
  text-align: center;
  width:80%;
  max-width:400px;
}

#player-1-name {
  background-color: rgba(255, 0, 0, 0);
  border:none;
  border:2px solid white;
  width:90%;
  max-width:320px;
  height:50px;
  padding-left:10px;
  padding-right:10px;
  border-radius:10px;
}

#player-2-name {
  background-color: rgba(255, 0, 0, 0);
  border:none;
  border:2px solid white;
  width:90%;
  height:50px;
  max-width:320px;
  padding-left:10px;
  padding-right:10px;
  border-radius:10px;
}

.grid-item {
  font-family: "VampireWars", sans-serif;
  color:transparent;
  background-color: rgb(255, 255, 255);
  border:2px solid #F7F0F0;
  display: flex;
  justify-content: center;
  align-items: center;
}

.grid-item:hover {
  cursor: pointer;
  background-color: rgb(177, 241, 158);
}

#game-start-overlay {
  height: 100vh;
  width:100%;
  position: absolute;
  z-index: 999;
  background-image: url("./Christmas Background.jpg");
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 16px;
  visibility: visible;
}

h1 {
  font-size:7rem;
  font-family: "Hamish";
  color:#F7F0F0;
}

#santa-title {
  color: #CF0002;
  text-shadow: 
      -3px -3px 0 #F7F0F0,
      3px -3px 0 #F7F0F0,
      -3px 3px 0 #F7F0F0,
      3px 3px 0 #F7F0F0;
}

#vs-title {
  font-size:5rem;
}

#sprouts-title {
  color: #47672c;
  text-shadow: 
      -3px -3px 0 #F7F0F0,
      3px -3px 0 #F7F0F0,
      -3px 3px 0 #F7F0F0,
      3px 3px 0 #F7F0F0;
}

#radio-container {
  display: flex;
  flex-direction: row;
  gap: 24px;
  font-size:2rem;
  color:#F7F0F0;
}

#ai-container {
  display: flex;
  flex-direction: row;
  gap: 24px;
  font-size:2rem;
  color:#F7F0F0;
}

#player-2-container {
  display:flex;
  flex-direction: column;
  display: none;
  font-size:2rem;
  color:#F7F0F0;
  gap:20px;
  align-items: center;
  width:100%;
}

#difficulty-container {
  display:flex;
  flex-direction:column;
  gap:20px;
  align-items: center;
  width:90%;
  max-width:320px;
}

#choose-difficulty {
  -webkit-appearance: none; border-radius: 0;
  background-color: rgba(255, 0, 0, 0);
  border:none;
  border:2px solid white;
  width:100%;
  height:50px;
  border-radius:10px;
  font-size:2rem;
  color:white;
  padding-left:10px;
  padding-right:10px;
}

#continue-button {
  color:#F7F0F0;
  background-color:#cf000300;
  border:none;
  font-size:2rem;
  height:50px;
  width:140px;
}

#continue-button:hover {
  cursor:pointer;
  color:#D8DDEF;
}

#game-outcome-overlay {
  width: 100%;
  position: absolute;
  z-index: 999;
  visibility: hidden;
  display: flex;
  align-items: center;
  justify-content: center;;
  margin-bottom:30px;
}

#game-outcome-content {
  height: 25%;
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

#game-outcome-message {
  font-family: Arial, Helvetica, sans-serif;
  font-size: 4rem;
  font-family: "Hamish";
  color:#F7F0F0;
}

#game-outcome-overlay-buttons {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  gap: 20px;
}

#game-outcome-overlay-buttons button {
width:160px;
font-size:2rem;
color:#F7F0F0;
border:none;
background: none;
}

#game-outcome-overlay-buttons button:hover {
 cursor:pointer;
 color:#D8DDEF;
}

#game-score {
  font-family: Arial, Helvetica, sans-serif;
  width:100%;
  display:flex;
  flex-direction: row;
  justify-content: space-around;
  align-items: center;
  font-size:3rem;
  color:#F7F0F0;
}

@media only screen and (max-width: 1024px) {
  #game-title {
    font-size:5rem;
    display:flex;
    flex-direction:row;
    align-items: center;
    gap:10px;
  }
  
  #santa-title {
    text-shadow: 
        -1px -1px 0 #F7F0F0,
        1px -1px 0 #F7F0F0,
        -1px 1px 0 #F7F0F0,
        1px 1px 0 #F7F0F0;
  }
  
  #vs-title {
    font-size:4rem;
  }

  #sprouts-title {
    text-shadow: 
        -1px -1px 0 #F7F0F0,
        1px -1px 0 #F7F0F0,
        -1px 1px 0 #F7F0F0,
        1px 1px 0 #F7F0F0;
  }
}


@media only screen and (max-width: 767px) {
  #game-start-overlay {
    gap:20px;
    height: 100svh;
  }

#game-outcome-overlay {
  display:flex;
  flex-direction: column;;
  align-items: center;
}

#game-outcome-content {
  width:90%;
  text-align: center;
}

#game-outcome-message {
font-size:2rem;
}

  #game-title {
    font-size:3rem;
    display:flex;
    flex-direction:row;
    align-items: center;
    gap:10px;
  }
  
  #santa-title {
    text-shadow: 
        -1px -1px 0 #F7F0F0,
        1px -1px 0 #F7F0F0,
        -1px 1px 0 #F7F0F0,
        1px 1px 0 #F7F0F0;
  }
  
  #vs-title {
    font-size:2rem;
  }
  
  #sprouts-title {
    text-shadow: 
        -1px -1px 0 #F7F0F0,
        1px -1px 0 #F7F0F0,
        -1px 1px 0 #F7F0F0,
        1px 1px 0 #F7F0F0;
  }

  label {
    font-size:1.5rem;
    color:white;
  }

  input {
    font-size:1.5rem;
    color:white;
  }

  #choose-difficulty {
    font-size:1.5rem;
  }

  #game-score {
    flex-direction:column;
    font-size:2rem;
  }
}

@media only screen and (max-width: 360px) {
  #game-title {
    flex-direction: column;
    gap:0px;
  }

  #game-container {
    width: 90%;
  }

  #game-outcome-overlay-buttons {
    flex-direction:column;
    gap:0px;
    margin-top:10px;
  }
}

